fix overflow Home Page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   height: 100dvh;
   width: 100%;
-  overflow-x: auto;
+  overflow-x: hidden;
   &::after {
     content: "";
     position: absolute;
